# kyra

./: .air.toml  .editorconfig  .eslintrc  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  go.mod  go.sum  kyra-api.service  main.go  package.json  routes.go  tsconfig.json  utils.go
.bin/: geninfo.cjs
@types/global/: index.d.ts
app/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.tsx  routes.ts
app/src/errors/: 404.tsx
app/src/layouts/: dashboard.tsx
app/src/pages/: home.tsx
app/src/pages/auth/: layout.tsx  login.tsx  register.tsx
app/src/pages/dashboard/: layout.tsx
app/src/providers/: AuthProvider.tsx
config/: init.go
controllers/: api.go  users.go
database/: connect.go
middleware/: authenticate.go
models/: app.go  common.go  users.go
routes/: api.go  auth.go  images.go  users.go
src/: index.ts  info.json  main.rs  settings.ts
src/api/: Base.ts  Route.ts  Router.ts
src/api/routes/: ImageDELETE.ts  ImagePOST.ts  IndexGET.ts
src/api/routes/auth/: Login.ts  Me.ts
src/api/routes/image/: Delete.ts  Post.ts
src/controllers/: auth.rs  common.rs  image.rs
src/models/: Image.ts  User.ts
src/structs/: auth.rs  common.rs  mod.rs  user.rs
src/types/: General.ts  Settings.ts
src/utils/: Collection.ts  Logger.ts  general.ts
src/views/: error.ejs
template/: package.json  template.go  vite.config.ts
template/src/: auto-imports.d.ts  components.d.ts  main.ts
template/src/api/: ApiService.ts  AuthApiService.ts
template/src/types/: User.ts
utils/: common.go
(+12 files in other folders)
