[package]
name = "kyra-api"
version = "0.0.0"
authors = ["Pepijn van den Broek <pepijn@vdbroek.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_repr = "0.1"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = { version = "2", features = ["zstd-compression", "snappy-compression", "zlib-compression"] }
chrono = "0.4"
dotenv = "0.15"
bcrypt = "0.14"
axum-auth = { version = "0.4", default-features = false, features = ["auth-bearer"] }
async-trait = "0.1"
jsonwebtoken = "8"
image = { version = "0.24", features = ["webp-encoder"] }
nanoid = "0.4"
md5 = "0.7.0"
